--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
+streamlit                     # 1.34.0 이상 권장
 pandas
 numpy
 matplotlib
-seaborn
-plotly==5.19.0     # 최신 안정 + kaleido 지원
-kaleido==0.2.1
-torch==2.2.2
-torchvision==0.17.2
-captum==0.7.0
+seaborn                       # → 다른 앱에서 쓴다면 남김
+plotly==5.19.0                # kaleido 사용 가능한 안정 버전
+kaleido==0.2.1                # plotly static 렌더링 휠
+torch==2.2.2                  # CPU 휠, 3.11 지원
+torchvision==0.17.2           # 필요 없다면 삭제 OK
+captum==0.7.0                 # IG · DeepLift 등
 pillow
-shap==0.45.0       # 3.11 휠 존재
+shap==0.45.0                  # 3.11 휠 제공
