--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-streamlit                     # 1.34.0 이상 권장
-pandas
-numpy
-matplotlib
-seaborn                       # → 다른 앱에서 쓴다면 남김
-plotly==5.19.0                # kaleido 사용 가능한 안정 버전
-kaleido==0.2.1                # plotly static 렌더링 휠
-torch==2.2.2                  # CPU 휠, 3.11 지원
-torchvision==0.17.2           # 필요 없다면 삭제 OK
-captum==0.7.0                 # IG · DeepLift 등
-pillow
-shap==0.45.0                  # 3.11 휠 제공
+# ───── 필수 런타임 ─────
+streamlit          # 웹 앱 프레임워크
+pandas             # CSV 처리
+numpy              # 수치 연산
+matplotlib         # 그래프 (IG·SHAP 시각화)
+
+# ───── 모델 / XAI ─────
+torch==2.2.2       # CPU 버전; 3.11 휠 제공
+captum==0.7.0      # Integrated Gradients 등
+shap==0.45.0       # SHAP 값 계산 (3.11 휠 제공)
